fix(assets): spacing tweaks to assets table

--- a/src/components/AssetsResultsCount/AssetsResultsCount.scss
+++ b/src/components/AssetsResultsCount/AssetsResultsCount.scss
@@ -1,7 +1,6 @@
 @import 'edx-bootstrap';
 
 .result-count-wrapper {
-  padding-left: 1.0rem;
   padding-right: 1.0rem;
   padding-bottom: 1.0rem;
 }
