--- a/src/components/AssetsSearch/AssetsSearch.scss
+++ b/src/components/AssetsSearch/AssetsSearch.scss
@@ -11,5 +11,5 @@
 
 .form-inline button {
   margin-left: 1.0rem;
-  padding: 0.8rem 1.0rem;
+  padding: 0.625rem 0.9rem;
 }
